syntax = "proto3";
option go_package = ".;proto";
import "google/protobuf/empty.proto";
import "message/proxy_dto.proto";
import "message/spam_dto.proto";
import "message/tor_dto.proto";
import "message/vpn_dto.proto";

service IPService {
  rpc GetProxyList(google.protobuf.Empty) returns (GetProxyListResponse) {}
  rpc GetSpamList(google.protobuf.Empty) returns (GetSpamListResponse) {}
  rpc GetTorList(google.protobuf.Empty) returns (GetTorListResponse) {}
  rpc GetVPNList(google.protobuf.Empty) returns (GetVPNListResponse) {}

}

message GetProxyListResponse {
  repeated Proxy proxies = 1;
}
message GetSpamListResponse {
  repeated Spam spam = 1;
}

message GetTorListResponse {
  repeated Tor tor = 1;
}

message GetVPNListResponse {
  repeated VPN vpn = 1;
}